--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.thefinestartist:ytpa:1.2.0'
+    compile 'com.google.android.gms:play-services-ads:7.5.0'
+
+
 }
